# rxnSMILES4AtomEco

./: BHC.txt  Boots.txt  LCA.txt  README.md  pyproject.toml  test_atom_eco.py  upload.txt
additional_models/: Molecular_Fingerprinting_and_Similarity_Search.py  QSAR_Model.py  Visualization_and_Clustering.py  temp_C.py
jupyter_notebooks/: Acetone_synthesis.ipynb  BHC_Company_synthesis_of_ibuprofen.ipynb  Boots_Company_synthesis_of_ibuprofen.ipynb  README.ipynb  Untitled.ipynb
src/rxnSMILES4AtomEco/: __init__.py  atom_eco.py  test.py
src/rxnSMILES4AtomEco.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
