[project]
name = "rxnSMILES4AtomEco"
version = "2025.06.01"
authors = [
  { name = "Samuele Giani", email = "samuele.giani@gmail.com" }
]
description = "Calculate atom economy for chemical reactions using reaction SMILES"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]
dependencies = [
    "rdkit==2024.3.1"
]

[project.urls]
Homepage = "https://github.com/sgiani95/rxnSMILES4AtomEco"
Issues = "https://github.com/sgiani95/rxnSMILES4AtomEco/issues"

[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"